gfx/layers/d3d11/TextureD3D11.cpp
@@ -449,9 +449,7 @@ D3D11TextureData* D3D11TextureData::Create(IntSize aSize, SurfaceFormat aFormat,
   }
 
   newDesc.MiscFlags = D3D11_RESOURCE_MISC_SHARED;
-  // WebRender requests keyed mutex.
-  if (gfxVars::UseWebRender() || !NS_IsMainThread() ||
-      !!(aFlags & ALLOC_FOR_OUT_OF_BAND_CONTENT)) {
+  if (!NS_IsMainThread() || !!(aFlags & ALLOC_FOR_OUT_OF_BAND_CONTENT)) {
     // On the main thread we use the syncobject to handle synchronization.
     if (!(aFlags & ALLOC_MANUAL_SYNCHRONIZATION)) {
       newDesc.MiscFlags = D3D11_RESOURCE_MISC_SHARED_KEYEDMUTEX;
